feat: added an example of how to add cluster labels to original df

--- a/lernnavi_clustering_efforts.ipynb
+++ b/lernnavi_clustering_efforts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1427088bafba4b71baa02a5eaa984594",
+       "model_id": "96b55c863b7e426eb5ac90aa639cacdb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,6 +65,7 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
     "import importlib\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,27 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'cluster' from '/Users/aybarsyazici/Documents/EPFL/ML_Behavioral/final-submission-uclumasa/cluster.py'>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cluster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -120,13 +110,13 @@
     }
    ],
    "source": [
-    "user_ids, data = cluster.prepare_data(students=mastery_df_german,min_week=6, scaled = True)\n",
+    "user_ids, data = cluster.prepare_data(students=mastery_df_german,min_week=6, scale = True)\n",
     "cluster.visualize_data(data[len(data)-1]) # We visualize one student's data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +145,7 @@
        "         0.05645012]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -497,19 +487,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "windows = [0,1,2,3,4,5,6]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "windows = [0,1,2,3,4,5,6]\n",
     "D_for_window = {\n",
     "    window: cluster.get_distance_matrix(data, metric='dtw', window=window) if window != 0 else cluster.get_distance_matrix(data, metric='e') for window in windows\n",
     "}"
@@ -1067,6 +1049,219 @@
     "    cluster.visualize_clusters(get_original_rows(user_ids, kmeans.labels_, mastery_df_german, 6), kmeans.labels_, 6)\n",
     "    print(\"_________________________________________________________\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we will add the labels to the data set\n",
+    "\n",
+    "First we need to reconstruct the data set that we used for clustering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1024"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# from mastery_df_german, drop users that have their max_weeks_since_first_transaction < 6\n",
+    "min_6_weeks = mastery_df_german.groupby('user_id').filter(lambda x: len(x) >= 7)\n",
+    "min_6_weeks = min_6_weeks[min_6_weeks['weeks_since_first_transaction'] < 6] # only consider their first 6 weeks...\n",
+    "min_6_weeks = min_6_weeks.groupby('user_id').filter(lambda x: sum(x.num_questions) > 0) # ... but only if they have answered at least one question\n",
+    "min_6_weeks.user_id.nunique()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have the data set, we cluster with some parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1024\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>weeks_since_first_transaction</th>\n",
+       "      <th>mastery</th>\n",
+       "      <th>diligence</th>\n",
+       "      <th>num_questions</th>\n",
+       "      <th>percentage_correct</th>\n",
+       "      <th>num_review</th>\n",
+       "      <th>num_view</th>\n",
+       "      <th>ratio_window_visible</th>\n",
+       "      <th>cluster</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>387604</td>\n",
+       "      <td>Deutsch</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>387604</td>\n",
+       "      <td>Deutsch</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>387604</td>\n",
+       "      <td>Deutsch</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>387604</td>\n",
+       "      <td>Deutsch</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.900000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>387604</td>\n",
+       "      <td>Deutsch</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.645161</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id    title  weeks_since_first_transaction  mastery  diligence  \\\n",
+       "0   387604  Deutsch                              0      0.0        0.0   \n",
+       "1   387604  Deutsch                              1      0.0        0.0   \n",
+       "2   387604  Deutsch                              2      0.0        0.0   \n",
+       "3   387604  Deutsch                              3      0.0        0.0   \n",
+       "4   387604  Deutsch                              4      0.0        0.0   \n",
+       "\n",
+       "   num_questions  percentage_correct  num_review  num_view  \\\n",
+       "0            0.0                 NaN         0.0       NaN   \n",
+       "1            0.0                 NaN         0.0       NaN   \n",
+       "2            0.0                 NaN         0.0       1.0   \n",
+       "3            0.0                 NaN         0.0       NaN   \n",
+       "4            1.0                 0.0         0.0      15.0   \n",
+       "\n",
+       "   ratio_window_visible  cluster  \n",
+       "0                   NaN        1  \n",
+       "1                   NaN        1  \n",
+       "2              0.909091        1  \n",
+       "3              0.900000        1  \n",
+       "4              0.645161        1  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gamma = 5\n",
+    "k = 3\n",
+    "window = 1\n",
+    "D = D_for_window[window]\n",
+    "S = cluster.get_affinity_matrix(D, gamma)\n",
+    "W = cluster.get_adjacency(S)\n",
+    "kmeans, proj_X, eigenvals_sorted = cluster.spectral_clustering(W, k)\n",
+    "\n",
+    "# merge the labels to min_6_weeks\n",
+    "min_6_weeks = min_6_weeks.merge(pd.DataFrame({'user_id': user_ids, 'cluster': kmeans.labels_}), on='user_id', how='inner')\n",
+    "print(min_6_weeks.user_id.nunique())\n",
+    "min_6_weeks.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
