added new clustered dataframes (27 csv for each topic)

--- a/lernnavi_clustering_efforts.ipynb
+++ b/lernnavi_clustering_efforts.ipynb
@@ -2001,7 +2001,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2166,6 +2168,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The following cell constructs all possible combinations of clustering parameters to experiment on."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "gamma_values = [0.1, 2, 5]\n",
+    "k_values = [2, 3, 4]\n",
+    "window_values = [0, 1, 3]\n",
+    "combinations = []\n",
+    "\n",
+    "#Create combinations of gamma, k and window variables\n",
+    "for i in gamma_values:\n",
+    "    for j in k_values:\n",
+    "        for k in window_values:\n",
+    "            combinations.append([i,j,k])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The following cell clusters the students using different parameters and saves them as .csv files under /cluster_csv folder\n",
     "\n",
     "## For German"
@@ -2173,23 +2201,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "#Clustering parameters stored as tuple (gamma, k, window)\n",
-    "params = [(10,3,3), (7,3,5), (5,3,6)]\n",
-    "\n",
-    "#Create foldeer cluster_csv if it does not exists\n",
+    "#Create folder cluster_csv if it does not exists\n",
     "exists = os.path.exists(\"cluster_csv\")\n",
     "if not exists:\n",
     "    os.makedirs(\"cluster_csv\")\n",
     "    \n",
-    "for param in params:\n",
-    "    gamma = param[0]\n",
-    "    k = param[1]\n",
-    "    window = param[2]\n",
+    "for c in combinations:\n",
+    "    gamma = c[0]\n",
+    "    k = c[1]\n",
+    "    window = c[2]\n",
     "    D = D_for_window_german[window]\n",
     "    S = cluster.get_affinity_matrix(D, gamma)\n",
     "    W = cluster.get_adjacency(S)\n",
@@ -2199,7 +2223,7 @@
     "    min_6_weeks_german_merged = min_6_weeks_german.merge(pd.DataFrame({'user_id': user_ids_german, 'cluster': kmeans.labels_}), on='user_id', how='inner')\n",
     "    path = f\"cluster_csv/german_gamma_{gamma}_k_{k}_window_{window}.csv\"\n",
     "    min_6_weeks_german_merged.to_csv(path)\n",
-    "    \n"
+    "    "
    ]
   },
   {
@@ -2211,23 +2235,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "#Clustering parameters stored as tuple (gamma, k, window)\n",
-    "params = [(6,3,3), (5,3,4), (6,3,5), (10,3,4)]\n",
-    "\n",
     "#Create foldeer cluster_csv if it does not exists\n",
     "exists = os.path.exists(\"cluster_csv\")\n",
     "if not exists:\n",
     "    os.makedirs(\"cluster_csv\")\n",
     "    \n",
-    "for param in params:\n",
-    "    gamma = param[0]\n",
-    "    k = param[1]\n",
-    "    window = param[2]\n",
+    "for c in combinations:\n",
+    "    gamma = c[0]\n",
+    "    k = c[1]\n",
+    "    window = c[2]\n",
     "    D = D_for_window_math[window]\n",
     "    S = cluster.get_affinity_matrix(D, gamma)\n",
     "    W = cluster.get_adjacency(S)\n",
